--- a/Papeterie5/src/fr/eni/papeterie/dal/settings.properties
+++ b/Papeterie5/src/fr/eni/papeterie/dal/settings.properties
@@ -1,4 +1,4 @@
-url=jdbc:sqlserver://localhost:1433;databaseName=PAPETERIE_DB;encrypt=true;trustServerCertificate=true;
+url=jdbc:sqlserver://localhost:1433;databaseName=VOTRE_DATABASE;encrypt=true;trustServerCertificate=true;
 user=sa
-password=0340117sql
+password=votre mot de passe
 driverjdbc=com.microsoft.sqlserver.jdbc.SQLServerDriver
